LAB_2/code/k8s/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: passgen-api-service
spec:
  type: ClusterIP
  selector:
    app: passgen-api
  ports:
    - port: 8000
      targetPort: 8000
