LAB_2/code/k8s/front-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: passgen-front-service
spec:
  type: ClusterIP
  selector:
    app: passgen-front
  ports:
    - port: 80
      targetPort: 80
