LAB_2/code/k8s/ingress-resource.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: passgen-ingress
spec:
  rules:
    - host: passgen.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: passgen-front-service
                port:
                  number: 80
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: passgen-api-service
                port:
                  number: 8000
